Changed error page styling

--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
         <h2><span id="address">Address</span>Watcher</h2>
       </div>
       <h1>404 Not Found</h1>
-      <p>Sorry, the page you were looking for cannot be found.</p>
+      <p class="help">Sorry, the page you were looking for cannot be found.</p>
       <div id="footer">
         <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
       </div>
