--- a/public/500.html
+++ b/public/500.html
@@ -18,7 +18,7 @@
         <h2><span id="address">Address</span>Watcher</h2>
       </div>
       <h1>500 Internal Server Error</h1>
-      <p>Sorry, something went wrong. The error has been logged and is being investigated.</p>
+      <p class="help">Sorry, something went wrong. The error has been logged and is being investigated.</p>
       <div id="footer">
         <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
       </div>
