Improved appearance of 404 and 500 error pages

--- a/public/404.html
+++ b/public/404.html
@@ -18,10 +18,10 @@
         <h2><span id="address">Address</span>Watcher</h2>
       </div>
       <h1>404 Not Found</h1>
-      <p class="help">Sorry, the page you were looking for cannot be found.</p>
-      <div id="footer">
-        <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
-      </div>
-    </div
+      <p id="http_error">Sorry, the page you were looking for cannot be found.</p>
+    </div>
+    <div id="footer">
+      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+    </div>
   </body>
 </html>
