--- a/public/500.html
+++ b/public/500.html
@@ -18,10 +18,10 @@
         <h2><span id="address">Address</span>Watcher</h2>
       </div>
       <h1>500 Internal Server Error</h1>
-      <p class="help">Sorry, something went wrong. The error has been logged and is being investigated.</p>
-      <div id="footer">
-        <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
-      </div>
-    </div
+      <p id="http_error">Sorry, something went wrong. The error has been logged and is being investigated.</p>
+    </div>
+    <div id="footer">
+      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+    </div>
   </body>
 </html>
