Updating copyright notice in footer to include current year

--- a/public/404.html
+++ b/public/404.html
@@ -21,7 +21,7 @@
       <p id="http_error">Sorry, the page you were looking for cannot be found.</p>
     </div>
     <div id="footer">
-      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+      <p>Copyright &copy; 2008&ndash;2009 <a href="http://www.johntopley.com/">John Topley</a></p>
     </div>
   </body>
 </html>
