--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
       <p id="http_error">Sorry, something went wrong. The error has been logged and is being investigated.</p>
     </div>
     <div id="footer">
-      <p>Copyright &copy; 2008 <a href="http://www.johntopley.com/">John Topley</a></p>
+      <p>Copyright &copy; 2008&ndash;2009 <a href="http://www.johntopley.com/">John Topley</a></p>
     </div>
   </body>
 </html>
